--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -14,6 +14,8 @@ jobs:
     defaults:
       run:
         working-directory: 'backend/'
+    env:
+      LD_LIBRARY_PATH: /usr/local/lib
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -39,7 +41,7 @@ jobs:
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
-      - name: Configure PATH
+      - name: Configure environment
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       - name: Cache dependencies
         id: cache-deps
