--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,6 +40,7 @@ sphinx-rtd-theme = "^0.5.0"
 mypy = "^0.790"
 sphinx-js = "^3.1"
 dephell = "^0.8.3"
+freezegun = "^1.1.0"
 
 [tool.black]
 line-length = 88
