--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,7 +1,8 @@
 version: 2
-
+build:
+  image: testing
 python:
-  version: 3.8
+  version: 3.9
   install:
     - method: pip
       path: ./backend/
