--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -103,7 +103,7 @@ jobs:
         id: cache-mypy
         uses: actions/cache@v2
         with:
-          path: .mypy_cache
+          path: backend/.mypy_cache
           key: "${{ runner.os }}-mypy"
       - name: Run type check
         run: make typecheck
