--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,33 +14,32 @@ repertoire = "src.__main__:run"
 [tool.poetry.dependencies]
 python = "^3.9"
 ariadne = "^0.12.0"
-click = "^7.1"
-huey = "^2.3"
-pillow = "^7.2.0"
-python-dotenv = "^0.14.0"
-quart = "^0.13.1"
-requests = "^2.24"
+click = "^7.1.2"
+huey = "^2.3.0"
+Pillow = "^8.1.0"
+python-dotenv = "^0.15.0"
+Quart = "^0.14.1"
+requests = "^2.25.1"
 tagfiles = "^0.3.2"
-voluptuous = "^0.11.7"
-yoyo-migrations = "^7.2"
+voluptuous = "^0.12.1"
+yoyo-migrations = "^7.3.1"
 
 [tool.poetry.dev-dependencies]
-autodocsumm = "0.1.13"
-black = "=20.8b1"
-flake8 = "^3.8"
-isort = "^5.4"
-mypy = "^0.790"
-pytest = "^6.1.1"
-pytest-asyncio = "^0.14.0"
-pytest-cov = "^2.10.1"
-snapshottest = "^0.6.0"
-sphinx = "^3.2.1"
-sphinx-autodoc-typehints = "^1.11.1"
-sphinx-rtd-theme = "^0.5.0"
-sphinx-js = "^3.1"
-"sphinxcontrib.httpdomain" = "^1.7.0"
+autodocsumm = "^0.2.2"
+black = "^20.8b1"
 dephell = "^0.8.3"
 freezegun = "^1.1.0"
+isort = "^5.7.0"
+mypy = "^0.812"
+pytest = "^6.2.2"
+pytest-asyncio = "^0.14.0"
+pytest-cov = "^2.11.1"
+snapshottest = "^0.6.0"
+Sphinx = "^3.5.1"
+sphinx-autodoc-typehints = "^1.11.1"
+sphinx-rtd-theme = "^0.5.1"
+sphinxcontrib-httpdomain = "^1.7.0"
+flake8 = "^3.8.4"
 
 [tool.black]
 line-length = 88
