update mypy cache keys

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -104,7 +104,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: backend/.mypy_cache
-          key: "${{ runner.os }}-mypy"
+          key: "${{ runner.os }}-mypy-${{ github.sha }}"
+          restore-key: "${{ runner.os }}-mypy-"
       - name: Run type check
         run: make typecheck
   lint_check:
