--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "127.0.0.1:5000:5000"
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
       - ./data:/data
       - ./testlib:/music
   frontend:
@@ -16,6 +16,7 @@ services:
     ports:
       - "127.0.0.1:3000:3000"
     volumes:
-      - ./frontend:/app
+      - ./backend:/app/backend
+      - ./frontend:/app/frontend
       - ./data:/data
       - ./testlib:/music
