change `make tests` to `make test`

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,4 +1,4 @@
-tests:
+test:
 	poetry run pytest --cov=. --cov-branch tests/
 	poetry run coverage html
 
@@ -30,4 +30,4 @@ setupfiles:
 	poetry export -f requirements.txt -o requirements.txt
 	poetry run dephell deps convert --from pyproject.toml --to setup.py
 
-.PHONY: tests typecheck lintcheck lint schema docs setupfiles setupcheck
+.PHONY: test typecheck lintcheck lint schema docs setupfiles setupcheck
