--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,7 +27,7 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: yarn install
       - name: Run tests
-        run: yarn test
+        run: yarn jest --coverage --collectCoverageFrom='{src,tests}/**/*.{ts,tsx}' 
       - name: Upload coverage
         run: bash <(curl -s https://codecov.io/bash) -cF typescript
   type_check:
