WORKING BUTTON STORIES

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,8 +18,9 @@
     "baseUrl": "./",
     "paths": {
       "~/*": ["./src/*"],
-      "~t/*": ["./tests/*"]
+      "~stories/*": ["./src/*"],
+      "~tests/*": ["./tests/*"]
     }
   },
-  "include": ["src", "tests", "types"]
+  "include": ["src", "stories", "tests", "types"]
 }
