--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,9 @@
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
+    "@storybook/addons": "^6.1.21",
     "@storybook/react": "^6.1.21",
+    "@storybook/theming": "^6.1.21",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.20",
