--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,10 @@ services:
       - /app/frontend/node_modules/
       - ./data:/data
       - ./testlib:/music
+  codecept:
+    build: ./tests
+    ports:
+      - "127.0.0.1:3333:3333"
+    volumes:
+      - ./tests:/app/tests
+      - /app/tests/node_modules/
