--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,7 +89,8 @@
     "react-is": "^17.0.1",
     "snowpack": "^3.0.1",
     "typedoc": "^0.20.24",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "wait-port": "^0.2.9"
   },
   "browserslist": {
     "production": [
