more data fixes

--- a/backend/yoyo.ini
+++ b/backend/yoyo.ini
@@ -5,4 +5,4 @@ sources = src/migrations
 migration_table = _yoyo_migration
 batch_mode = off
 verbosity = 0
-database = sqlite:///../data/db.sqlite3
+database = sqlite:///../_data/db.sqlite3
