--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-poetry-1.1.4
+          key: ${{ runner.os }}-therealpoetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -49,6 +49,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-key: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -86,7 +87,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-poetry-1.1.4
+          key: ${{ runner.os }}-therealpoetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -98,6 +99,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-key: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -140,7 +142,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-poetry-1.1.4
+          key: ${{ runner.os }}-therealpoetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -152,6 +154,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-key: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -187,7 +190,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-poetry-1.1.4
+          key: ${{ runner.os }}-therealpoetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -199,6 +202,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-key: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -240,7 +244,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-poetry-1.1.4
+          key: ${{ runner.os }}-therealpoetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -252,6 +256,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-key: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
