--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,6 +13,7 @@ jobs:
     env:
       CI: true
       DATA_PATH: ../data
+      HEADLESS: true
       LD_LIBRARY_PATH: /usr/local/lib
     steps:
       - uses: actions/checkout@v2
