Add E2E test framework with CodeceptJS + Playwright (#200)
* start e2e tests

* got e2e tests going

* update

* add dev endpoint to backend to create test user

* add dev endpoint to index library in blocking request

* create necessary shit as part of env setup

* add e2e CI

* another attempt at CI

* lint

* third attempt at CI

* lint bakcend

* ci attempt 4!

* more observability into diff CI jobs

* increase backend wait timeout

* fix schema generation makefile cmd

* read units better

* more data fixes

* update cache keys

* oops... tests should be headless

* download test library into _testlib

* fix config.ini

* i hate myself

--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -16,6 +16,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
+      DATA_PATH: ../data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -37,7 +38,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: {{ "${{ runner.os }}-poetry-1.1.4" }}
+          key: {{ "${{ runner.os }}-therealpoetry-1.1.4" }}
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -49,6 +50,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: {{ "${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}" }}
+          restore-key: {{ "${{ runner.os }}-poetry-" }}
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
