--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "127.0.0.1:5000:5000"
     volumes:
       - ./backend:/app/backend
-      - ./data:/data
-      - ./testlib:/music
+      - ./_data:/data
+      - ./_testlib:/music
   frontend:
     build: ./frontend
     ports:
@@ -19,9 +19,8 @@ services:
     volumes:
       - ./backend:/app/backend
       - ./frontend:/app/frontend
-      - /app/frontend/node_modules/
-      - ./data:/data
-      - ./testlib:/music
+      - ./_data:/data
+      - ./_testlib:/music
   storybook:
     build: ./frontend
     command: yarn storybook
@@ -30,6 +29,5 @@ services:
     volumes:
       - ./backend:/app/backend
       - ./frontend:/app/frontend
-      - /app/frontend/node_modules/
-      - ./data:/data
-      - ./testlib:/music
+      - ./_data:/data
+      - ./_testlib:/music
