--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "repertoire",
   "version": "0.2.0",
   "private": true,
+  "license": "AGPL-3.0",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -88,7 +89,8 @@
     "react-is": "^17.0.1",
     "snowpack": "^3.0.1",
     "typedoc": "^0.20.24",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "wait-port": "^0.2.9"
   },
   "browserslist": {
     "production": [
