fix backend data path; add debug server to backend makefile

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,7 +15,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -65,7 +65,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -120,7 +120,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -168,7 +168,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -222,7 +222,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
