--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -16,7 +16,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
