--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -99,7 +99,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -109,7 +109,7 @@ jobs:
         with:
           path: backend/.mypy_cache
           key: "${{ runner.os }}-mypy-${{ github.sha }}"
-          restore-key: "${{ runner.os }}-mypy-"
+          restore-keys: "${{ runner.os }}-mypy-"
       - name: Run type check
         run: make typecheck
   lint_check:
@@ -154,7 +154,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -202,7 +202,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -256,7 +256,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
