--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -16,7 +16,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -50,7 +50,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: {{ "${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}" }}
-          restore-key: {{ "${{ runner.os }}-poetry-" }}
+          restore-keys: {{ "${{ runner.os }}-poetry-" }}
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
