--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,7 +15,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -49,7 +49,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -65,7 +65,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -99,7 +99,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -109,7 +109,7 @@ jobs:
         with:
           path: backend/.mypy_cache
           key: "${{ runner.os }}-mypy-${{ github.sha }}"
-          restore-key: "${{ runner.os }}-mypy-"
+          restore-keys: "${{ runner.os }}-mypy-"
       - name: Run type check
         run: make typecheck
   lint_check:
@@ -120,7 +120,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -154,7 +154,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -168,7 +168,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -202,7 +202,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -222,7 +222,7 @@ jobs:
         working-directory: 'backend/'
     env:
       LD_LIBRARY_PATH: /usr/local/lib
-      DATA_PATH: ../data 
+      DATA_PATH: ../_data 
     steps:
       - uses: actions/checkout@v2
       - name: Cache SQLite
@@ -256,7 +256,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-key: ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
