--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: true
-      DATA_PATH: ../data
+      DATA_PATH: ../_data
       HEADLESS: true
       LD_LIBRARY_PATH: /usr/local/lib
     steps:
@@ -59,7 +59,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/backend/poetry.lock') }}
-          restore-key: "${{ runner.os }}-poetry-"
+          restore-keys: "${{ runner.os }}-poetry-"
       - name: Install backend dependencies
         if: steps.cache-backend-deps.outputs.cache-hit != 'true'
         run: poetry install
@@ -70,7 +70,7 @@ jobs:
         with:
           path: frontend/node_modules/
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/frontend/yarn.lock') }}
-          restore-key: "${{ runner.os }}-yarn-"
+          restore-keys: "${{ runner.os }}-yarn-"
       - name: Install frontend dependencies
         if: steps.cache-frontend-deps.outputs.cache-hit != 'true'
         run: yarn install
@@ -79,9 +79,11 @@ jobs:
         id: cache-test-deps
         uses: actions/cache@v2
         with:
-          path: tests/node_modules/
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/tests/yarn.lock') }}
-          restore-key: "${{ runner.os }}-yarn-"
+          path: |
+            tests/node_modules/
+            ~/.cache/ms-playwright
+          key: ${{ runner.os }}-yarn-playwright-${{ hashFiles('**/tests/yarn.lock') }}
+          restore-keys: "${{ runner.os }}-yarn-playwright-"
       - name: Install codecept dependencies
         if: steps.cache-test-deps.outputs.cache-hit != 'true'
         run: yarn install
@@ -91,7 +93,7 @@ jobs:
           mkdir _data/
           printf '[repertoire]\nmusic_directories = ["../_testlib"]\nindex_crontab = 0 0 * * *' > _data/config.ini
           cd backend/
-          QUART_DEBUG=1 QUART_APP="src.webserver.app:create_app()" poetry run quart run &
+          make debug &
           cd ../frontend/
           yarn wait-port -t 30000 5000
           yarn start &
