--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -104,6 +104,7 @@ jobs:
           yarn wait-port -t 30000 3000
           yarn headless
       - name: Upload test artifacts
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: codeceptjs-output
