--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,7 +13,6 @@ jobs:
     env:
       CI: true
       DATA_PATH: ../_data
-      HEADLESS: true
       LD_LIBRARY_PATH: /usr/local/lib
     steps:
       - uses: actions/checkout@v2
@@ -88,15 +87,25 @@ jobs:
         if: steps.cache-test-deps.outputs.cache-hit != 'true'
         run: yarn install
         working-directory: tests/
-      - name: Run e2e tests
+      - name: Spin up backend server
         run: |
-          mkdir _data/
+          mkdir -p _data/ tests/output/logs/
           printf '[repertoire]\nmusic_directories = ["../_testlib"]\nindex_crontab = 0 0 * * *' > _data/config.ini
           cd backend/
-          make debug &
-          cd ../frontend/
+          make debug > ../tests/output/logs/backend.log 2>&1 &
+      - name: Spin up frontend server
+        run: |
+          cd frontend/
           yarn wait-port -t 30000 5000
-          yarn start &
-          cd ../tests/
+          yarn start > ../tests/output/logs/frontend.log 2>&1 &
+      - name: Run CodeceptJS tests
+        run: |
+          cd tests/
           yarn wait-port -t 30000 3000
-          yarn codeceptjs run --steps
+          yarn headless
+      - name: Upload test artifacts
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: codeceptjs-output
+          path: tests/output/
